# lab-rknn-resnet18

./: Dockerfile  README.md  app.py  pyproject.toml  service.yaml
.github/workflows/: main.yml
